[package]
name = "tweet-like-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
regex = "1"
toml = "0.5.9"
futures = "0.3"
log = "0.4.17"
env_logger = "0.9"